--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -3,15 +3,15 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 5rem;
+  height: 4rem;
   background-color: #418568;
   color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 1%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  z-index: 10;
+  /* z-index: 10; */
   margin-bottom: 3rem;
 }
 
