--- a/src/components/StockDataTable.module.css
+++ b/src/components/StockDataTable.module.css
@@ -2,3 +2,23 @@
  width: 60rem;
  margin: 8rem auto;
 }
+
+.isLoadingTxt{
+ position: fixed;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ font-size: 2rem;
+ color: red;
+ font-weight: 100;
+}
+
+.apiStatusText{
+ position: fixed;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ font-size: 2rem;
+ color: red;
+ font-weight: 100;
+}
